force-app/main/default/objects/Account_Forecast__c/Account_Forecast__c.object-meta.xml
<CustomObject>
    <description>Forecast details calculated by AccountForecastBatch</description>
    <label>Account Forecast</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Account Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>