force-app/main/default/objects/Account_Forecast__c/fields/Advertiser_Agency_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Agency_Relationship__c</fullName>
    <label>Advertiser-Agency Relationship</label>
    <referenceTo>Advertiser_Agency_Relationship__c</referenceTo>
    <relationshipLabel>Account Forecasts</relationshipLabel>
    <relationshipName>Account_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>