force-app/main/default/objects/Account_Forecast__c/fields/Booking_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Booking_Next_Year__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booking (Next Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>