force-app/main/default/objects/Account_Forecast__c/fields/Bookings_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Current_Year__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bookings (Current Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>