force-app/main/default/objects/Account_Forecast__c/fields/Pipeline_Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Current_Quarter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pipeline (Current Quarter)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>