force-app/main/default/objects/Account_Forecast__c/fields/Trading_Deal__c.field-meta.xml
<CustomField>
    <fullName>Trading_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trading Deal</label>
    <type>Checkbox</type>
</CustomField>